# TimeAssistant

./: README.md
cmake/foo/: README.md
cmake/hello/: README.md  run.sh
cmake/mathtest/: README.md
cmake/ref/: README.md
commands/: README.md
commands/curl/: README.md  check_file_exist.md
cpp/crc32/: README.txt  crc.h  crc32.c  main.c
cpp/file_write/: hello.c
cpp/fork/: fork_list3_3.c
cpp/gtest/: math.cc  math.h  test-math.cpp
cpp/list_files/: main.cc
cpp/operator_test/: test.cc
cpp/pcre/: test.c
cpp/printf_warning/: test.c
cpp/read_write_read/: ftruncate.txt  test.c
cpp/reverse_link/: reverse_link.c
cpp/stl/: remove_elements.cc
cpp/strerror/: main.c
cpp/tolower/: main.cpp
cpp/wait/: wait.c
cpp/zombile_orphan_process/: zombie_orphan_process.c
docker/alpine/: README.md  main.c  main.cpp
docker/shell/: Dockerfile  README.md  main.py  test.sh
docker/ubuntu/: boost_test.cpp  boost_test_regex.cpp  cpp-python-dev-env.md  main.c  main.cpp
elk-todo/elasticsearch/: Empty_Date.md  MongoDB - Elasticsearch Connector.md  connector.md  date.md  date_mapping.md  find_pid.md  hosts.md  match_phrase.md  max_file_descriptors.md  (+2 more)
golang/: BOOKS.md  README.md
golang/cgo/cgo_cpp/version2/src/: CMakeLists.txt  main.c
golang/cgo/cgo_cpp/version2/src/file_api/: file_api.cpp
golang/cgo/cgo_cpp/version2/src/file_api/include/: file_api.h
golang/cgo/cgo_cpp/version2/src/utils/: CMakeLists.txt  file_utility.cpp
golang/cgo/cgo_cpp/version2/src/utils/include/: file_utility.h
mongodb/: Introduction.md
python/: BOOKS.md
ruby/: README.md
(+223 files in other folders)
